# ChangeLog for app-admin/gnome-system-tools
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/gnome-system-tools/ChangeLog,v 1.68 2006/08/16 13:12:39 corsair Exp $

  16 Aug 2006; Markus Rothe <corsair@gentoo.org>
  gnome-system-tools-2.14.0.ebuild:
  Stable on ppc64

  23 Jul 2006; Daniel Gryniewicz <dang@gentoo.org>
  -gnome-system-tools-1.4.0.ebuild:
  Clean up unnecessary versions

  17 Jul 2006; Daniel Gryniewicz <dang@gentoo.org>
  gnome-system-tools-2.14.0.ebuild:
  Marked stable on amd64 for bug #139612

  16 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  gnome-system-tools-2.14.0.ebuild:
  hppa stable, bug #139612

  14 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  gnome-system-tools-2.14.0.ebuild:
  ppc stable, bug #139612

  12 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  gnome-system-tools-2.14.0.ebuild:
  Stable on x86 wrt bug #139612.

  10 Jul 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  gnome-system-tools-2.14.0.ebuild:
  Stable on sparc wrt #139612

  20 May 2006; Marinus Schraal <foser@gentoo.org>
  files/gnome-system-tools-2.14.0-ALL_LINGUAS.patch:
  Fix the patch (#133711)

  18 May 2006; Patrick McLean <chutzpah@gentoo.org>
  Somehow a space got dropped from the patch, added back (bug #133711)

  18 May 2006; Patrick McLean <chutzpah@gentoo.org>
  +files/gnome-system-tools-2.14.0-ALL_LINGUAS.patch,
  gnome-system-tools-2.14.0.ebuild:
  Added patch to fix bug #133616

  08 May 2006; Daniel Gryniewicz <dang@gentoo.org>
  gnome-system-tools-2.14.0.ebuild:
  Update intltool dep per bug #132693

  08 May 2006; <dang@gentoo.org>
  +files/gnome-system-tools-2.14.0-as-needed.patch,
  gnome-system-tools-2.14.0.ebuild:
  Fix for --as-needed.  Bug #129230

*gnome-system-tools-2.14.0 (17 Mar 2006)

  17 Mar 2006; Joe McCann <joem@gentoo.org>
  +gnome-system-tools-2.14.0.ebuild:
  new version for gnome-2.14

  06 Feb 2006; Aron Griffis <agriffis@gentoo.org>