@@ -1,6 +1,11 @@
 # ChangeLog for app-admin/system-tools-backends
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/system-tools-backends/ChangeLog,v 1.31 2006/07/23 18:19:06 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/system-tools-backends/ChangeLog,v 1.32 2006/09/03 19:52:09 kumba Exp $
+
+  04 Sep 2006; Joshua Kinard <kumba@gentoo.org>
+  system-tools-backends-1.2.0.ebuild, system-tools-backends-1.4.1.ebuild,
+  system-tools-backends-1.4.2.ebuild:
+  Removing mips keywprds as gnome isn't supported for us anymore.
 
   23 Jul 2006; Daniel Gryniewicz <dang@gentoo.org>
   -system-tools-backends-1.4.0.ebuild:
