@@ -1,6 +1,11 @@
 # ChangeLog for app-admin/gnome-system-tools
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/gnome-system-tools/ChangeLog,v 1.68 2006/08/16 13:12:39 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/gnome-system-tools/ChangeLog,v 1.69 2006/09/03 19:53:26 kumba Exp $
+
+  04 Sep 2006; Joshua Kinard <kumba@gentoo.org>
+  gnome-system-tools-1.0.2-r1.ebuild, gnome-system-tools-1.2.0-r1.ebuild,
+  gnome-system-tools-1.4.1.ebuild, gnome-system-tools-2.14.0.ebuild:
+  Removing mips keywprds as gnome isn't supported for us anymore.
 
   16 Aug 2006; Markus Rothe <corsair@gentoo.org>
   gnome-system-tools-2.14.0.ebuild:
